--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <title>Aryy_lakk_Fonts</title>  
+
+  <!-- 🔥 SEO Meta Tags -->
+  <meta name="title" content="Aryy Lakk Fonts & Emojis - Stylish Generator">
+  <meta name="description" content="Generate fancy stylish fonts, emojis and kaomojis with Aryy Lakk Fonts tool. Copy and paste anywhere easily.">
+  <meta name="keywords" content="fancy fonts, stylish fonts, emoji generator, kaomoji, Aryy Lakk Fonts, Aryysopp">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Aryy Lakk">
+
   <style>  
     body { margin:0; font-family: Arial, sans-serif; background: #f5f5f5; text-align: center; }  
     header { background: #333; color: white; padding: 10px 15px; display: flex; align-items: center; }  
-    header img { height: 40px; margin-right: 10px; }  
+    header img { height: 40px; margin-right: 10px; border-radius: 8px; }  
     header h2 { margin: 0; font-size: 20px; }  
     nav { background: #444; display: flex; justify-content: space-around; }  
     nav a { color: white; padding: 12px; text-decoration: none; font-weight: bold; }  
